logs/auto_v6_500.out
  File "<stdin>", line 17
    transcripts += f"\n\n=== TRANSCRIPT {i}/{len(sample)} archetype={sim.get(\"archetype\")} partner={sim.get(\"partner_name\")} turns={sim.get(\"n_turns\")} ===\n"
                                                                              ^
SyntaxError: unexpected character after line continuation character
/opt/expwholesale/auto_v6_500.sh: line 110: /opt/expwholesale/logs/sim_results_v6_coach.md: No such file or directory
